# skktools

./: .cvsignore  .gitignore  .travis.yml  ChangeLog  Makefile.am  Makefile.in  README  README.md  acinclude.m4  config.h  config.h.in  configure  configure.ac  configure.in  configure.scan  ltmain.sh  saihenkan.rb  skk-xml.el  skk.ex  skk2cdb.py  skkdic-count.c  skkdic-diff.scm  skkdic-expr.c  skkdic-expr2.c  skkdic-sort.c  unannotation.awk
.github/workflows/: ci.yml
READMEs/: FAQ.md  FAQ.txt  README  README.C  README.C.md  README.filters  README.md  README.skkdic-diff  README.skkdic-diff.md  README.skkdic-expr2  README.skkdic-expr2.md  read.me  readme
convert2skk/: README  README.md  adddummy  alpha-kana.pl  aozora2skk.rb  atok2skk.pl  canna2skk.rb  chasen2skk.rb  ctdicconv.rb  dic-it2skk.rb  doc2skk.sh  edict2skk.awk  edict2toskk.el  ipadic2skk.rb  list2skk  prime2skk.rb  pubdic2list  removedummy  skk-wordpicker.rb  skk2list  wnn2skk.awk  wnn2skk.sed  wnn2skk.sh  wx2skk.pl
convert2skk/obsolete/: Makefile  README.md  README.perl  adddummy.t  codeconv.pl  convprog.t  kana2roma.pl  list2skk.t  pubdic2list.t  removedummy.t  roma2kana.pl  skk2list.t  skkconv.t  sub.t
dbm/: makedbmdic4  makedbmdic5
filters/: README  README.md  abbrev-convert.rb  abbrev-simplify-keys.rb  annotation-filter.rb  asayaKe.rb  complete-numerative.rb  conjugation.rb  make-tankan-dic.rb  skkdictools.rb
test/: SKK-JISYO.S  SKK-JISYO.S.shuffle  SKK-JISYO.S.split1  SKK-JISYO.S.split2  SKK-JISYO.S.split3
test/result/: skkdic-count  skkdic-expr2  skkdic-sort
